finalProj/Attempted_Lists_Implementation/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    comment
    usub
    input
    uadd
    ocurly
    rparen
    string
    lparen
    ccurly

Grammar

Rule 0     S' -> module
Rule 1     module -> stmt
Rule 2     stmt -> statement_list
Rule 3     statement_list -> statement
Rule 4     statement_list -> statement_list statement
Rule 5     statement -> newline statement
Rule 6     statement -> statement newline
Rule 7     statement -> print expression
Rule 8     parameters -> expression
Rule 9     parameters -> parameters comma expression
Rule 10    parameters -> <empty>
Rule 11    statement -> assname equals expression
Rule 12    statement -> expression
Rule 13    statement -> ifstmt
Rule 14    statement -> whilestmt
Rule 15    statement -> compound_stmt
Rule 16    statement -> simple_statement
Rule 17    expression -> expression oparen parameters cparen
Rule 18    expression -> lambda id_list colon expression
Rule 19    simple_statement -> return expression
Rule 20    compound_stmt -> def identifier oparen id_list cparen colon suite
Rule 21    id_list -> <empty>
Rule 22    id_list -> identifier
Rule 23    id_list -> identifier comma id_list
Rule 24    suite -> newline indent statement_list dedent
Rule 25    statement -> name incassign expression
Rule 26    statement -> name decassign expression
Rule 27    statement -> name divassign expression
Rule 28    statement -> name mulassign expression
Rule 29    statement -> name modassign expression
Rule 30    statement -> name lshiftassign expression
Rule 31    statement -> name rshiftassign expression
Rule 32    statement -> name andassign expression
Rule 33    statement -> name orassign expression
Rule 34    statement -> name xorassign expression
Rule 35    statement -> name powerassign expression
Rule 36    statement -> name floorassign expression
Rule 37    expression -> boolean
Rule 38    expression -> minus expression
Rule 39    expression -> plus expression
Rule 40    expression -> invert expression
Rule 41    expression -> expression0
Rule 42    expression -> oparen expression cparen
Rule 43    expression -> not expression
Rule 44    expression -> name
Rule 45    expression -> expression plus expression
Rule 46    expression -> expression minus expression
Rule 47    expression -> expression times expression
Rule 48    expression -> expression div expression
Rule 49    expression -> expression power expression
Rule 50    expression -> expression modulo expression
Rule 51    expression -> expression lshift expression
Rule 52    expression -> expression rshift expression
Rule 53    expression -> expression floordiv expression
Rule 54    expression -> expression and expression
Rule 55    expression -> expression or expression
Rule 56    expression -> expression xor expression
Rule 57    expression -> expression strand expression
Rule 58    expression -> expression stror expression
Rule 59    expression -> expression lt expression
Rule 60    expression -> expression gt expression
Rule 61    expression -> expression lequal expression
Rule 62    expression -> expression gequal expression
Rule 63    expression -> expression isnotequal expression
Rule 64    expression -> expression isequal expression
Rule 65    ifstmt -> if expression colon newline indent statement_list dedent
Rule 66    ifstmt -> if expression colon newline indent statement_list dedent elsestmt
Rule 67    elsestmt -> else colon newline indent statement_list dedent
Rule 68    elsestmt -> elif expression colon newline indent statement_list dedent
Rule 69    elsestmt -> elif expression colon newline indent statement_list dedent elsestmt
Rule 70    whilestmt -> while expression colon newline indent statement_list dedent
Rule 71    expression0 -> num
Rule 72    expression0 -> name
Rule 73    expression0 -> noval
Rule 74    num -> integer
Rule 75    assname -> identifier
Rule 76    name -> identifier
Rule 77    noval -> none
Rule 78    boolean -> true
Rule 79    boolean -> false
Rule 80    list_obj -> <empty>
Rule 81    list_obj -> expression
Rule 82    list_obj -> list_obj comma expression
Rule 83    expression -> list
Rule 84    list -> obracket list_obj cbracket
Rule 85    expression -> identifier obracket integer cbracket

Terminals, with rules where they appear

and                  : 54
andassign            : 32
cbracket             : 84 85
ccurly               : 
colon                : 18 20 65 66 67 68 69 70
comma                : 9 23 82
comment              : 
cparen               : 17 20 42
decassign            : 26
dedent               : 24 65 66 67 68 69 70
def                  : 20
div                  : 48
divassign            : 27
elif                 : 68 69
else                 : 67
equals               : 11
error                : 
false                : 79
floorassign          : 36
floordiv             : 53
gequal               : 62
gt                   : 60
identifier           : 20 22 23 75 76 85
if                   : 65 66
incassign            : 25
indent               : 24 65 66 67 68 69 70
input                : 
integer              : 74 85
invert               : 40
isequal              : 64
isnotequal           : 63
lambda               : 18
lequal               : 61
lparen               : 
lshift               : 51
lshiftassign         : 30
lt                   : 59
minus                : 38 46
modassign            : 29
modulo               : 50
mulassign            : 28
newline              : 5 6 24 65 66 67 68 69 70
none                 : 77
not                  : 43
obracket             : 84 85
ocurly               : 
oparen               : 17 20 42
or                   : 55
orassign             : 33
plus                 : 39 45
power                : 49
powerassign          : 35
print                : 7
return               : 19
rparen               : 
rshift               : 52
rshiftassign         : 31
strand               : 57
string               : 
stror                : 58
times                : 47
true                 : 78
uadd                 : 
usub                 : 
while                : 70
xor                  : 56
xorassign            : 34

Nonterminals, with rules where they appear

assname              : 11
boolean              : 37
compound_stmt        : 15
elsestmt             : 66 69
expression           : 7 8 9 11 12 17 18 19 25 26 27 28 29 30 31 32 33 34 35 36 38 39 40 42 43 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 62 63 63 64 64 65 66 68 69 70 81 82
expression0          : 41
id_list              : 18 20 23
ifstmt               : 13
list                 : 83
list_obj             : 82 84
module               : 0
name                 : 25 26 27 28 29 30 31 32 33 34 35 36 44 72
noval                : 73
num                  : 71
parameters           : 9 17
simple_statement     : 16
statement            : 3 4 5 6
statement_list       : 2 4 24 65 66 67 68 69 70
stmt                 : 1
suite                : 20
whilestmt            : 14

Parsing method: LALR

state 0

    (0) S' -> . module
    (1) module -> . stmt
    (2) stmt -> . statement_list
    (3) statement_list -> . statement
    (4) statement_list -> . statement_list statement
    (5) statement -> . newline statement
    (6) statement -> . statement newline
    (7) statement -> . print expression
    (11) statement -> . assname equals expression
    (12) statement -> . expression
    (13) statement -> . ifstmt
    (14) statement -> . whilestmt
    (15) statement -> . compound_stmt
    (16) statement -> . simple_statement
    (25) statement -> . name incassign expression
    (26) statement -> . name decassign expression
    (27) statement -> . name divassign expression
    (28) statement -> . name mulassign expression
    (29) statement -> . name modassign expression
    (30) statement -> . name lshiftassign expression
    (31) statement -> . name rshiftassign expression
    (32) statement -> . name andassign expression
    (33) statement -> . name orassign expression
    (34) statement -> . name xorassign expression
    (35) statement -> . name powerassign expression
    (36) statement -> . name floorassign expression
    (75) assname -> . identifier
    (17) expression -> . expression oparen parameters cparen
    (18) expression -> . lambda id_list colon expression
    (37) expression -> . boolean
    (38) expression -> . minus expression
    (39) expression -> . plus expression
    (40) expression -> . invert expression
    (41) expression -> . expression0
    (42) expression -> . oparen expression cparen
    (43) expression -> . not expression
    (44) expression -> . name
    (45) expression -> . expression plus expression
    (46) expression -> . expression minus expression
    (47) expression -> . expression times expression
    (48) expression -> . expression div expression
    (49) expression -> . expression power expression
    (50) expression -> . expression modulo expression
    (51) expression -> . expression lshift expression
    (52) expression -> . expression rshift expression
    (53) expression -> . expression floordiv expression
    (54) expression -> . expression and expression
    (55) expression -> . expression or expression
    (56) expression -> . expression xor expression
    (57) expression -> . expression strand expression
    (58) expression -> . expression stror expression
    (59) expression -> . expression lt expression
    (60) expression -> . expression gt expression
    (61) expression -> . expression lequal expression
    (62) expression -> . expression gequal expression
    (63) expression -> . expression isnotequal expression
    (64) expression -> . expression isequal expression
    (83) expression -> . list
    (85) expression -> . identifier obracket integer cbracket
    (65) ifstmt -> . if expression colon newline indent statement_list dedent
    (66) ifstmt -> . if expression colon newline indent statement_list dedent elsestmt
    (70) whilestmt -> . while expression colon newline indent statement_list dedent
    (20) compound_stmt -> . def identifier oparen id_list cparen colon suite
    (19) simple_statement -> . return expression
    (76) name -> . identifier
    (78) boolean -> . true
    (79) boolean -> . false
    (71) expression0 -> . num
    (72) expression0 -> . name
    (73) expression0 -> . noval
    (84) list -> . obracket list_obj cbracket
    (74) num -> . integer
    (77) noval -> . none

    newline         shift and go to state 17
    print           shift and go to state 14
    identifier      shift and go to state 30
    lambda          shift and go to state 34
    minus           shift and go to state 32
    plus            shift and go to state 28
    invert          shift and go to state 11
    oparen          shift and go to state 13
    not             shift and go to state 20
    if              shift and go to state 9
    while           shift and go to state 27
    def             shift and go to state 33
    return          shift and go to state 6
    true            shift and go to state 22
    false           shift and go to state 8
    obracket        shift and go to state 25
    integer         shift and go to state 16
    none            shift and go to state 23

    num                            shift and go to state 10
    name                           shift and go to state 24
    list                           shift and go to state 26
    noval                          shift and go to state 1
    simple_statement               shift and go to state 2
    stmt                           shift and go to state 18
    compound_stmt                  shift and go to state 15
    whilestmt                      shift and go to state 4
    assname                        shift and go to state 19
    boolean                        shift and go to state 5
    module                         shift and go to state 3
    statement                      shift and go to state 12
    statement_list                 shift and go to state 29
    expression0                    shift and go to state 21
    expression                     shift and go to state 31
    ifstmt                         shift and go to state 7

state 1

    (73) expression0 -> noval .

    oparen          reduce using rule 73 (expression0 -> noval .)
    plus            reduce using rule 73 (expression0 -> noval .)
    minus           reduce using rule 73 (expression0 -> noval .)
    times           reduce using rule 73 (expression0 -> noval .)
    div             reduce using rule 73 (expression0 -> noval .)
    power           reduce using rule 73 (expression0 -> noval .)
    modulo          reduce using rule 73 (expression0 -> noval .)
    lshift          reduce using rule 73 (expression0 -> noval .)
    rshift          reduce using rule 73 (expression0 -> noval .)
    floordiv        reduce using rule 73 (expression0 -> noval .)
    and             reduce using rule 73 (expression0 -> noval .)
    or              reduce using rule 73 (expression0 -> noval .)
    xor             reduce using rule 73 (expression0 -> noval .)
    strand          reduce using rule 73 (expression0 -> noval .)
    stror           reduce using rule 73 (expression0 -> noval .)
    lt              reduce using rule 73 (expression0 -> noval .)
    gt              reduce using rule 73 (expression0 -> noval .)
    lequal          reduce using rule 73 (expression0 -> noval .)
    gequal          reduce using rule 73 (expression0 -> noval .)
    isnotequal      reduce using rule 73 (expression0 -> noval .)
    isequal         reduce using rule 73 (expression0 -> noval .)
    newline         reduce using rule 73 (expression0 -> noval .)
    print           reduce using rule 73 (expression0 -> noval .)
    identifier      reduce using rule 73 (expression0 -> noval .)
    lambda          reduce using rule 73 (expression0 -> noval .)
    invert          reduce using rule 73 (expression0 -> noval .)
    not             reduce using rule 73 (expression0 -> noval .)
    if              reduce using rule 73 (expression0 -> noval .)
    while           reduce using rule 73 (expression0 -> noval .)
    def             reduce using rule 73 (expression0 -> noval .)
    return          reduce using rule 73 (expression0 -> noval .)
    true            reduce using rule 73 (expression0 -> noval .)
    false           reduce using rule 73 (expression0 -> noval .)
    obracket        reduce using rule 73 (expression0 -> noval .)
    integer         reduce using rule 73 (expression0 -> noval .)
    none            reduce using rule 73 (expression0 -> noval .)
    $end            reduce using rule 73 (expression0 -> noval .)
    dedent          reduce using rule 73 (expression0 -> noval .)
    colon           reduce using rule 73 (expression0 -> noval .)
    cparen          reduce using rule 73 (expression0 -> noval .)
    cbracket        reduce using rule 73 (expression0 -> noval .)
    comma           reduce using rule 73 (expression0 -> noval .)


state 2

    (16) statement -> simple_statement .

    newline         reduce using rule 16 (statement -> simple_statement .)
    print           reduce using rule 16 (statement -> simple_statement .)
    identifier      reduce using rule 16 (statement -> simple_statement .)
    lambda          reduce using rule 16 (statement -> simple_statement .)
    minus           reduce using rule 16 (statement -> simple_statement .)
    plus            reduce using rule 16 (statement -> simple_statement .)
    invert          reduce using rule 16 (statement -> simple_statement .)
    oparen          reduce using rule 16 (statement -> simple_statement .)
    not             reduce using rule 16 (statement -> simple_statement .)
    if              reduce using rule 16 (statement -> simple_statement .)
    while           reduce using rule 16 (statement -> simple_statement .)
    def             reduce using rule 16 (statement -> simple_statement .)
    return          reduce using rule 16 (statement -> simple_statement .)
    true            reduce using rule 16 (statement -> simple_statement .)
    false           reduce using rule 16 (statement -> simple_statement .)
    obracket        reduce using rule 16 (statement -> simple_statement .)
    integer         reduce using rule 16 (statement -> simple_statement .)
    none            reduce using rule 16 (statement -> simple_statement .)
    $end            reduce using rule 16 (statement -> simple_statement .)
    dedent          reduce using rule 16 (statement -> simple_statement .)


state 3

    (0) S' -> module .



state 4

    (14) statement -> whilestmt .

    newline         reduce using rule 14 (statement -> whilestmt .)
    print           reduce using rule 14 (statement -> whilestmt .)
    identifier      reduce using rule 14 (statement -> whilestmt .)
    lambda          reduce using rule 14 (statement -> whilestmt .)
    minus           reduce using rule 14 (statement -> whilestmt .)
    plus            reduce using rule 14 (statement -> whilestmt .)
    invert          reduce using rule 14 (statement -> whilestmt .)
    oparen          reduce using rule 14 (statement -> whilestmt .)
    not             reduce using rule 14 (statement -> whilestmt .)
    if              reduce using rule 14 (statement -> whilestmt .)
    while           reduce using rule 14 (statement -> whilestmt .)
    def             reduce using rule 14 (statement -> whilestmt .)
    return          reduce using rule 14 (statement -> whilestmt .)
    true            reduce using rule 14 (statement -> whilestmt .)
    false           reduce using rule 14 (statement -> whilestmt .)
    obracket        reduce using rule 14 (statement -> whilestmt .)
    integer         reduce using rule 14 (statement -> whilestmt .)
    none            reduce using rule 14 (statement -> whilestmt .)
    $end            reduce using rule 14 (statement -> whilestmt .)
    dedent          reduce using rule 14 (statement -> whilestmt .)


state 5

    (37) expression -> boolean .

    oparen          reduce using rule 37 (expression -> boolean .)
    plus            reduce using rule 37 (expression -> boolean .)
    minus           reduce using rule 37 (expression -> boolean .)
    times           reduce using rule 37 (expression -> boolean .)
    div             reduce using rule 37 (expression -> boolean .)
    power           reduce using rule 37 (expression -> boolean .)
    modulo          reduce using rule 37 (expression -> boolean .)
    lshift          reduce using rule 37 (expression -> boolean .)
    rshift          reduce using rule 37 (expression -> boolean .)
    floordiv        reduce using rule 37 (expression -> boolean .)
    and             reduce using rule 37 (expression -> boolean .)
    or              reduce using rule 37 (expression -> boolean .)
    xor             reduce using rule 37 (expression -> boolean .)
    strand          reduce using rule 37 (expression -> boolean .)
    stror           reduce using rule 37 (expression -> boolean .)
    lt              reduce using rule 37 (expression -> boolean .)
    gt              reduce using rule 37 (expression -> boolean .)
    lequal          reduce using rule 37 (expression -> boolean .)
    gequal          reduce using rule 37 (expression -> boolean .)
    isnotequal      reduce using rule 37 (expression -> boolean .)
    isequal         reduce using rule 37 (expression -> boolean .)
    newline         reduce using rule 37 (expression -> boolean .)
    dedent          reduce using rule 37 (expression -> boolean .)
    print           reduce using rule 37 (expression -> boolean .)
    identifier      reduce using rule 37 (expression -> boolean .)
    lambda          reduce using rule 37 (expression -> boolean .)
    invert          reduce using rule 37 (expression -> boolean .)
    not             reduce using rule 37 (expression -> boolean .)
    if              reduce using rule 37 (expression -> boolean .)
    while           reduce using rule 37 (expression -> boolean .)
    def             reduce using rule 37 (expression -> boolean .)
    return          reduce using rule 37 (expression -> boolean .)
    true            reduce using rule 37 (expression -> boolean .)
    false           reduce using rule 37 (expression -> boolean .)
    obracket        reduce using rule 37 (expression -> boolean .)
    integer         reduce using rule 37 (expression -> boolean .)
    none            reduce using rule 37 (expression -> boolean .)
    $end            reduce using rule 37 (expression -> boolean .)
    colon           reduce using rule 37 (expression -> boolean .)
    cparen          reduce using rule 37 (expression -> boolean .)
    cbracket        reduce using rule 37 (expression -> boolean .)
    comma           reduce using rule 37 (expression -> boolean .)


state 6

    (19) simple_statement -> return . expression
    (17) expression -> . expression oparen parameters cparen
    (18) expression -> . lambda id_list colon expression
    (37) expression -> . boolean
    (38) expression -> . minus expression
    (39) expression -> . plus expression
    (40) expression -> . invert expression
    (41) expression -> . expression0
    (42) expression -> . oparen expression cparen
    (43) expression -> . not expression
    (44) expression -> . name
    (45) expression -> . expression plus expression
    (46) expression -> . expression minus expression
    (47) expression -> . expression times expression
    (48) expression -> . expression div expression
    (49) expression -> . expression power expression
    (50) expression -> . expression modulo expression
    (51) expression -> . expression lshift expression
    (52) expression -> . expression rshift expression
    (53) expression -> . expression floordiv expression
    (54) expression -> . expression and expression
    (55) expression -> . expression or expression
    (56) expression -> . expression xor expression
    (57) expression -> . expression strand expression
    (58) expression -> . expression stror expression
    (59) expression -> . expression lt expression
    (60) expression -> . expression gt expression
    (61) expression -> . expression lequal expression
    (62) expression -> . expression gequal expression
    (63) expression -> . expression isnotequal expression
    (64) expression -> . expression isequal expression
    (83) expression -> . list
    (85) expression -> . identifier obracket integer cbracket
    (78) boolean -> . true
    (79) boolean -> . false
    (71) expression0 -> . num
    (72) expression0 -> . name
    (73) expression0 -> . noval
    (76) name -> . identifier
    (84) list -> . obracket list_obj cbracket
    (74) num -> . integer
    (77) noval -> . none

    lambda          shift and go to state 34
    minus           shift and go to state 32
    plus            shift and go to state 28
    invert          shift and go to state 11
    oparen          shift and go to state 13
    not             shift and go to state 20
    identifier      shift and go to state 36
    true            shift and go to state 22
    false           shift and go to state 8
    obracket        shift and go to state 25
    integer         shift and go to state 16
    none            shift and go to state 23

    num                            shift and go to state 10
    name                           shift and go to state 35
    list                           shift and go to state 26
    boolean                        shift and go to state 5
    noval                          shift and go to state 1
    expression0                    shift and go to state 21
    expression                     shift and go to state 37

state 7

    (13) statement -> ifstmt .

    newline         reduce using rule 13 (statement -> ifstmt .)
    print           reduce using rule 13 (statement -> ifstmt .)
    identifier      reduce using rule 13 (statement -> ifstmt .)
    lambda          reduce using rule 13 (statement -> ifstmt .)
    minus           reduce using rule 13 (statement -> ifstmt .)
    plus            reduce using rule 13 (statement -> ifstmt .)
    invert          reduce using rule 13 (statement -> ifstmt .)
    oparen          reduce using rule 13 (statement -> ifstmt .)
    not             reduce using rule 13 (statement -> ifstmt .)
    if              reduce using rule 13 (statement -> ifstmt .)
    while           reduce using rule 13 (statement -> ifstmt .)
    def             reduce using rule 13 (statement -> ifstmt .)
    return          reduce using rule 13 (statement -> ifstmt .)
    true            reduce using rule 13 (statement -> ifstmt .)
    false           reduce using rule 13 (statement -> ifstmt .)
    obracket        reduce using rule 13 (statement -> ifstmt .)
    integer         reduce using rule 13 (statement -> ifstmt .)
    none            reduce using rule 13 (statement -> ifstmt .)
    $end            reduce using rule 13 (statement -> ifstmt .)
    dedent          reduce using rule 13 (statement -> ifstmt .)


state 8

    (79) boolean -> false .

    oparen          reduce using rule 79 (boolean -> false .)
    plus            reduce using rule 79 (boolean -> false .)
    minus           reduce using rule 79 (boolean -> false .)
    times           reduce using rule 79 (boolean -> false .)
    div             reduce using rule 79 (boolean -> false .)
    power           reduce using rule 79 (boolean -> false .)
    modulo          reduce using rule 79 (boolean -> false .)
    lshift          reduce using rule 79 (boolean -> false .)
    rshift          reduce using rule 79 (boolean -> false .)
    floordiv        reduce using rule 79 (boolean -> false .)
    and             reduce using rule 79 (boolean -> false .)
    or              reduce using rule 79 (boolean -> false .)
    xor             reduce using rule 79 (boolean -> false .)
    strand          reduce using rule 79 (boolean -> false .)
    stror           reduce using rule 79 (boolean -> false .)
    lt              reduce using rule 79 (boolean -> false .)
    gt              reduce using rule 79 (boolean -> false .)
    lequal          reduce using rule 79 (boolean -> false .)
    gequal          reduce using rule 79 (boolean -> false .)
    isnotequal      reduce using rule 79 (boolean -> false .)
    isequal         reduce using rule 79 (boolean -> false .)
    newline         reduce using rule 79 (boolean -> false .)
    print           reduce using rule 79 (boolean -> false .)
    identifier      reduce using rule 79 (boolean -> false .)
    lambda          reduce using rule 79 (boolean -> false .)
    invert          reduce using rule 79 (boolean -> false .)
    not             reduce using rule 79 (boolean -> false .)
    if              reduce using rule 79 (boolean -> false .)
    while           reduce using rule 79 (boolean -> false .)
    def             reduce using rule 79 (boolean -> false .)
    return          reduce using rule 79 (boolean -> false .)
    true            reduce using rule 79 (boolean -> false .)
    false           reduce using rule 79 (boolean -> false .)
    obracket        reduce using rule 79 (boolean -> false .)
    integer         reduce using rule 79 (boolean -> false .)
    none            reduce using rule 79 (boolean -> false .)
    $end            reduce using rule 79 (boolean -> false .)
    dedent          reduce using rule 79 (boolean -> false .)
    colon           reduce using rule 79 (boolean -> false .)
    cparen          reduce using rule 79 (boolean -> false .)
    cbracket        reduce using rule 79 (boolean -> false .)
    comma           reduce using rule 79 (boolean -> false .)


state 9

    (65) ifstmt -> if . expression colon newline indent statement_list dedent
    (66) ifstmt -> if . expression colon newline indent statement_list dedent elsestmt
    (17) expression -> . expression oparen parameters cparen
    (18) expression -> . lambda id_list colon expression
    (37) expression -> . boolean
    (38) expression -> . minus expression
    (39) expression -> . plus expression
    (40) expression -> . invert expression
    (41) expression -> . expression0
    (42) expression -> . oparen expression cparen
    (43) expression -> . not expression
    (44) expression -> . name
    (45) expression -> . expression plus expression
    (46) expression -> . expression minus expression
    (47) expression -> . expression times expression
    (48) expression -> . expression div expression
    (49) expression -> . expression power expression
    (50) expression -> . expression modulo expression
    (51) expression -> . expression lshift expression
    (52) expression -> . expression rshift expression
    (53) expression -> . expression floordiv expression
    (54) expression -> . expression and expression
    (55) expression -> . expression or expression
    (56) expression -> . expression xor expression
    (57) expression -> . expression strand expression
    (58) expression -> . expression stror expression
    (59) expression -> . expression lt expression
    (60) expression -> . expression gt expression
    (61) expression -> . expression lequal expression
    (62) expression -> . expression gequal expression
    (63) expression -> . expression isnotequal expression
    (64) expression -> . expression isequal expression
    (83) expression -> . list
    (85) expression -> . identifier obracket integer cbracket
    (78) boolean -> . true
    (79) boolean -> . false
    (71) expression0 -> . num
    (72) expression0 -> . name
    (73) expression0 -> . noval
    (76) name -> . identifier
    (84) list -> . obracket list_obj cbracket
    (74) num -> . integer
    (77) noval -> . none

    lambda          shift and go to state 34
    minus           shift and go to state 32
    plus            shift and go to state 28
    invert          shift and go to state 11
    oparen          shift and go to state 13
    not             shift and go to state 20
    identifier      shift and go to state 36
    true            shift and go to state 22
    false           shift and go to state 8
    obracket        shift and go to state 25
    integer         shift and go to state 16
    none            shift and go to state 23

    num                            shift and go to state 10
    name                           shift and go to state 35
    list                           shift and go to state 26
    boolean                        shift and go to state 5
    noval                          shift and go to state 1
    expression0                    shift and go to state 21
    expression                     shift and go to state 38

state 10

    (71) expression0 -> num .

    oparen          reduce using rule 71 (expression0 -> num .)
    plus            reduce using rule 71 (expression0 -> num .)
    minus           reduce using rule 71 (expression0 -> num .)
    times           reduce using rule 71 (expression0 -> num .)
    div             reduce using rule 71 (expression0 -> num .)
    power           reduce using rule 71 (expression0 -> num .)
    modulo          reduce using rule 71 (expression0 -> num .)
    lshift          reduce using rule 71 (expression0 -> num .)
    rshift          reduce using rule 71 (expression0 -> num .)
    floordiv        reduce using rule 71 (expression0 -> num .)
    and             reduce using rule 71 (expression0 -> num .)
    or              reduce using rule 71 (expression0 -> num .)
    xor             reduce using rule 71 (expression0 -> num .)
    strand          reduce using rule 71 (expression0 -> num .)
    stror           reduce using rule 71 (expression0 -> num .)
    lt              reduce using rule 71 (expression0 -> num .)
    gt              reduce using rule 71 (expression0 -> num .)
    lequal          reduce using rule 71 (expression0 -> num .)
    gequal          reduce using rule 71 (expression0 -> num .)
    isnotequal      reduce using rule 71 (expression0 -> num .)
    isequal         reduce using rule 71 (expression0 -> num .)
    newline         reduce using rule 71 (expression0 -> num .)
    print           reduce using rule 71 (expression0 -> num .)
    identifier      reduce using rule 71 (expression0 -> num .)
    lambda          reduce using rule 71 (expression0 -> num .)
    invert          reduce using rule 71 (expression0 -> num .)
    not             reduce using rule 71 (expression0 -> num .)
    if              reduce using rule 71 (expression0 -> num .)
    while           reduce using rule 71 (expression0 -> num .)
    def             reduce using rule 71 (expression0 -> num .)
    return          reduce using rule 71 (expression0 -> num .)
    true            reduce using rule 71 (expression0 -> num .)
    false           reduce using rule 71 (expression0 -> num .)
    obracket        reduce using rule 71 (expression0 -> num .)
    integer         reduce using rule 71 (expression0 -> num .)
    none            reduce using rule 71 (expression0 -> num .)
    $end            reduce using rule 71 (expression0 -> num .)
    dedent          reduce using rule 71 (expression0 -> num .)
    colon           reduce using rule 71 (expression0 -> num .)
    cparen          reduce using rule 71 (expression0 -> num .)
    cbracket        reduce using rule 71 (expression0 -> num .)
    comma           reduce using rule 71 (expression0 -> num .)


state 11

    (40) expression -> invert . expression
    (17) expression -> . expression oparen parameters cparen
    (18) expression -> . lambda id_list colon expression
    (37) expression -> . boolean
    (38) expression -> . minus expression
    (39) expression -> . plus expression
    (40) expression -> . invert expression
    (41) expression -> . expression0
    (42) expression -> . oparen expression cparen
    (43) expression -> . not expression
    (44) expression -> . name
    (45) expression -> . expression plus expression
    (46) expression -> . expression minus expression
    (47) expression -> . expression times expression
    (48) expression -> . expression div expression
    (49) expression -> . expression power expression
    (50) expression -> . expression modulo expression
    (51) expression -> . expression lshift expression
    (52) expression -> . expression rshift expression
    (53) expression -> . expression floordiv expression
    (54) expression -> . expression and expression
    (55) expression -> . expression or expression
    (56) expression -> . expression xor expression
    (57) expression -> . expression strand expression
    (58) expression -> . expression stror expression
    (59) expression -> . expression lt expression
    (60) expression -> . expression gt expression
    (61) expression -> . expression lequal expression
    (62) expression -> . expression gequal expression
    (63) expression -> . expression isnotequal expression
    (64) expression -> . expression isequal expression
    (83) expression -> . list
    (85) expression -> . identifier obracket integer cbracket
    (78) boolean -> . true
    (79) boolean -> . false
    (71) expression0 -> . num
    (72) expression0 -> . name
    (73) expression0 -> . noval
    (76) name -> . identifier
    (84) list -> . obracket list_obj cbracket
    (74) num -> . integer
    (77) noval -> . none

    lambda          shift and go to state 34
    minus           shift and go to state 32
    plus            shift and go to state 28
    invert          shift and go to state 11
    oparen          shift and go to state 13
    not             shift and go to state 20
    identifier      shift and go to state 36
    true            shift and go to state 22
    false           shift and go to state 8
    obracket        shift and go to state 25
    integer         shift and go to state 16
    none            shift and go to state 23

    num                            shift and go to state 10
    name                           shift and go to state 35
    list                           shift and go to state 26
    boolean                        shift and go to state 5
    noval                          shift and go to state 1
    expression0                    shift and go to state 21
    expression                     shift and go to state 39

state 12

    (3) statement_list -> statement .
    (6) statement -> statement . newline

  ! shift/reduce conflict for newline resolved as shift
    dedent          reduce using rule 3 (statement_list -> statement .)
    print           reduce using rule 3 (statement_list -> statement .)
    identifier      reduce using rule 3 (statement_list -> statement .)
    lambda          reduce using rule 3 (statement_list -> statement .)
    minus           reduce using rule 3 (statement_list -> statement .)
    plus            reduce using rule 3 (statement_list -> statement .)
    invert          reduce using rule 3 (statement_list -> statement .)
    oparen          reduce using rule 3 (statement_list -> statement .)
    not             reduce using rule 3 (statement_list -> statement .)
    if              reduce using rule 3 (statement_list -> statement .)
    while           reduce using rule 3 (statement_list -> statement .)
    def             reduce using rule 3 (statement_list -> statement .)
    return          reduce using rule 3 (statement_list -> statement .)
    true            reduce using rule 3 (statement_list -> statement .)
    false           reduce using rule 3 (statement_list -> statement .)
    obracket        reduce using rule 3 (statement_list -> statement .)
    integer         reduce using rule 3 (statement_list -> statement .)
    none            reduce using rule 3 (statement_list -> statement .)
    $end            reduce using rule 3 (statement_list -> statement .)
    newline         shift and go to state 40

  ! newline         [ reduce using rule 3 (statement_list -> statement .) ]


state 13

    (42) expression -> oparen . expression cparen
    (17) expression -> . expression oparen parameters cparen
    (18) expression -> . lambda id_list colon expression
    (37) expression -> . boolean
    (38) expression -> . minus expression
    (39) expression -> . plus expression
    (40) expression -> . invert expression
    (41) expression -> . expression0
    (42) expression -> . oparen expression cparen
    (43) expression -> . not expression
    (44) expression -> . name
    (45) expression -> . expression plus expression
    (46) expression -> . expression minus expression
    (47) expression -> . expression times expression
    (48) expression -> . expression div expression
    (49) expression -> . expression power expression
    (50) expression -> . expression modulo expression
    (51) expression -> . expression lshift expression
    (52) expression -> . expression rshift expression
    (53) expression -> . expression floordiv expression
    (54) expression -> . expression and expression
    (55) expression -> . expression or expression
    (56) expression -> . expression xor expression
    (57) expression -> . expression strand expression
    (58) expression -> . expression stror expression
    (59) expression -> . expression lt expression
    (60) expression -> . expression gt expression
    (61) expression -> . expression lequal expression
    (62) expression -> . expression gequal expression
    (63) expression -> . expression isnotequal expression
    (64) expression -> . expression isequal expression
    (83) expression -> . list
    (85) expression -> . identifier obracket integer cbracket
    (78) boolean -> . true
    (79) boolean -> . false
    (71) expression0 -> . num
    (72) expression0 -> . name
    (73) expression0 -> . noval
    (76) name -> . identifier
    (84) list -> . obracket list_obj cbracket
    (74) num -> . integer
    (77) noval -> . none

    lambda          shift and go to state 34
    minus           shift and go to state 32
    plus            shift and go to state 28
    invert          shift and go to state 11
    oparen          shift and go to state 13
    not             shift and go to state 20
    identifier      shift and go to state 36
    true            shift and go to state 22
    false           shift and go to state 8
    obracket        shift and go to state 25
    integer         shift and go to state 16
    none            shift and go to state 23

    num                            shift and go to state 10
    name                           shift and go to state 35
    list                           shift and go to state 26
    boolean                        shift and go to state 5
    noval                          shift and go to state 1
    expression0                    shift and go to state 21
    expression                     shift and go to state 41

state 14
